Added the --simple-multiline flag to the list-domains API command, for outputting most of the information about virtual servers significantly faster.
Backups can now be restored from uploaded file, using a new source option on the restore form.
Resellers now have access to the DNS records and Apache logs for virtual servers they own.
Added fields to the Website Options page for changing the Apache log file locations, and added flags to the modify-web API command to do the same thing.
Added the get-ssl API command to output information about a virtual server's SSL certificate.
Domain owners can now be prevented from using the Website Redirects page via a new edit capability restriction.
Added user%domain as an option Unix username format.
Quotas are now disabled before importing a migrated database and re-enabled afterwards, to prevent quota issues from breaking the import process.
Added the New Feature Log page, for showing all major changes in previous Virtualmin versions.
The modify-dns API command can now add and remove slave DNS servers for virtual servers.
---- Changes since 3.78 ----
Updated the phpMyAdmin script installer to version 3.3.3, Zikula to 1.2.3, ZenCart to 1.3.9b, Zpush to 1.3, Mantis to 1.2.1, PHPlist to 2.10.12, Joomla to 1.5.18, Radiant to 0.8.2, Horde to 3.3.7, Horde Webmail to 1.2.6, CMS Made Simple to 1.7.1, Redmine to 0.9.4, Piwik to 0.6.2, Dolibarr to 2.8.1, SugarCRM to 5.5.2, Movable Type to 5.02, Django to 1.2.1, ZenCart to 1.3.9c, PHProjekt to 6.0.2, Coppermine to 1.4.27, Rails to 2.3.8, MediaWiki to 1.15.4, ZenPhoto to 1.3, and BugZilla to 3.6. Also updated all Horde applications to their latest versions.
Added a script installer for Foswiki, a TWiki fork.
Added options to the Module Config page for defining a link to additional documentation on the System Information page.
Added an option to the Magento script installer to setup sample data.